--- a/src/input.css
+++ b/src/input.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-font-family: "Poppins", sans-serif;
-
+  font-family: "Poppins", sans-serif;
 }
 @layer base {
   :root {
@@ -72,3 +71,31 @@ font-family: "Poppins", sans-serif;
     @apply bg-background text-foreground;
   }
 }
+.loader {
+        position: relative;
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        box-shadow: inset 0 0 20px -5px rgba(255, 255, 255, 0.5),
+                inset 0 -40px 40px -20px rgba(255, 255, 255, 0.5);
+        background: linear-gradient(#FF3D00 120px, transparent 0) no-repeat;
+        background-position: 0px 120px;
+        animation: fillLq 10s linear infinite alternate;
+      }
+      .loader:before {
+        position: absolute;
+        content: '';
+        width: 40%;
+        height: 25%;
+        top: 20px;
+        left: 10px;
+        background: rgba(255,255,255,0.1);
+        border-radius: 50%;
+        transform: rotate(-45deg);
+      }
+
+      @keyframes fillLq {
+        0% , 10% { background-position: 0 120px}
+        90% , 100% { background-position: 0 0}
+      }
+    
